# etl-spark-jobs

./: .env.sample  .gitignore  Makefile  README.md  build.sbt  docker-compose.yaml  pipeline_config.groovy  pyproject.toml  repositories  setup.cfg  sonar-project.properties  supports.yaml
apps/: main.py
apps/core/: constants.py  loggings.py  pipeline.py  utils.py
apps/core/conf/: jdbc.py  log_config.py  minio_config.py  storage.py
apps/core/crud/: minio_lake.py  postgres_ops.py
apps/core/crud/sql/: tested_trans_extracts.sql  trans_extracts.sql
apps/core/mappings/: ingest_transactions_dqc.py  oltp_to_olap_labels.py  test_dqc.py
apps/core/schemas/: trans_schemas.py
apps/pipelines/: main.py
apps/pipelines/ingest_transactions/: ingest_transactions.py  trans_tranforms.py
apps/src/core/: constants.py  data_quality.py  loggings.py  pipeline.py  utils.py
apps/src/core/conf/: jdbc.py  log_config.py  minio.py  minio_conf.py  storage.py
apps/test/: pytest.py  test_crud.py  test_pipeline.py  test_utils.py  unittest.py
apps/test/core/: test_utils.py
apps/test/data/: test_sql.sql
ci/: promote-to-release-jar.groovy
ci/lib/: environments.yaml
hooks/: commit-msg.sh  install-githooks.sh
scripts/: deploy.sh
spark/: Dockerfile.jupyterlab  requirements.txt
spark/conf/: spark-defaults.conf
spark/jupyter/: requirements.txt
spark/jupyter/notebooks/: iceberg-crud.ipynb  minio_uploader.ipynb
spark/scripts/: code-lints.sh  deploy.sh
src/main/resources/: log4j.properties  sc-bix-job.conf  sc-wrkf-job.conf
superset/: Dockerfile  superset_config.py
(+39 files in other folders)
