[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "simple-pyspark-project"
version = "0.1.0"
description = "A Simple PySpark project"
requires-python = ">=3.11.4"
dependencies = [
    "pyspark>=3.5.6"    
]

[project.optional-dependencies]
dev = [
    "ruff",
    "mypy"
]

[tool.setuptools.packages.find]
where = ["apps"]
include = ["core","pipelines"]
exclude = ["tests"]
namespaces = false

# [tool.setuptools]
# packages = ["apps.core", "apps.pipelines"]

[tool.ruff]
src = ['apps']
cache-dir = "tmp/ruff"
line-length = 100

[tool.ruff.lint]
# See https://docs.astral.sh/ruff/rules/
select = ["W", "F", "UP", "SIM", "I", "N", "E", "INP", "RET", "C4"]
ignore = ["E501", "INP001", "N812"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
cache_dir = "tmp/mypy"
# Allows shadowing (redefine variables with different types
allow_redefinition = true
disable_error_code = [
    "attr-defined",
    "arg-type",
    "return-value",
]